[package]
name = "maze_cli"
version = "0.1.0"
edition = "2021"
authors = ["Paul Sobolik <psobolik@zoho.com>"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
maze_lib = { path = "./maze_lib" }
clap = { version = "4.4", features = ["derive"] }
